@@ -9,8 +9,8 @@
 	<Button name="TellMeWhen_IconTemplate" virtual="true" enableMouse="true">
 		<Size x="30" y="30"/>
 
-		<HighlightTexture alphaMode="ADD" file="Interface\Buttons\ButtonHilight-Square"/>
-		<PushedTexture file="Interface\Buttons\UI-Quickslot-Depress"/>
+		<!-- <HighlightTexture alphaMode="ADD" file="Interface\Buttons\ButtonHilight-Square"/>
+		<PushedTexture file="Interface\Buttons\UI-Quickslot-Depress"/> -->
 	</Button>
 
 	<!-- END TEMPLATES -->
