@@ -4,6 +4,7 @@
  * Bug Fixes:
  ** Conditions with minimum values less than zero should now allow for these values to be selected.
  ** The Show Timer Text option should now work properly with Tukui.
+ ** You should no longer see an error randomly telling you that TMW can't do an action in combat when no action has been triggered.
  
 ===v6.0.4===
  * **New icon event: On Condition Set Passing. Allows you to create an event handler that reacts to the state of a condition set.**
